Code readability improvements